<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/booking_activity_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="auto"
    android:orientation="vertical">


    <TextView
        android:id="@+id/subject_click"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/seleziona_data"
        android:textSize="20sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recview_slots"
        android:layout_width="wrap_content"
        android:layout_height="332dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal"
        android:clipToPadding="true"
        android:layout_gravity="center"
        android:overScrollMode="never"
        android:nestedScrollingEnabled="false">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/select_teacher"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/seleziona_professore"
        android:textSize="20sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/teacher_recycler"
        android:layout_width="match_parent"
        android:layout_height="76dp">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/book_slot_button"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginTop="50dp"
        android:text="@string/prenota" />

</LinearLayout>